resources/ingress-triggers.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: tekton-triggers
  name: tekton-triggers
spec:
  rules:
  - host: tekton.example.com
    http:
      paths:
      - path: /hooks(/|$)(.*)
        backend:
          service:
            name: el-github-listener
            port:
              number: 8080
        pathType: Exact
  tls:
  - secretName: tekton.example.com-tls
    hosts:
    - tekton.example.com
